NOMIS-SHINY-APP/assets/sass/management/management.scss
.modal-dialog { width: fit-content !important; max-width: 100%;}


.text_out {
  background-color: #f5f5f5;
  border: 1px solid rgba(0,0,0,0.15);
  border-radius: 4px;
  padding: 10px;

}

#management-data-updated_values{
  white-space: pre-wrap;
  tab-size: 100px;

}

.btn-menu {
  margin-bottom: 1em;
  display: block;
}

.colHeader{
  white-space: pre-line;
}

.progresstable {
 width: inherit;
 overflow: auto;
}

#management-progress-progress_table td:nth-child(1) {
  background-color: white;
    /* Stick to the left */
  left: 0;
  position: sticky;
  border-right:2px solid #ddd;
  /* Displayed on top of other rows when scrolling */
  z-index: 9999;
}
#management-progress-progress_table th:first-child {
  background-color: white;
    /* Stick to the left */
  left: 0;
  position: sticky;

  /* Displayed on top of other rows when scrolling */
  z-index: 9999;
}

